name:                github-ipfs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/airalab/github-ipfs#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) Alexander Krupenkin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable github-ipfs
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Server, Register
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.9 && < 4.10
                     , servant-github-webhook
                     , servant-server
                     , bytestring
                     , shelly
                     , aeson
                     , text
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/airalab/github-ipfs
